--- a/index.html
+++ b/index.html
@@ -14,12 +14,27 @@
                 <div class="logo"></div>
             </div>
 
-            <div class="nav-addr">
+            <div class="nav-addr border">
                 <p class="addr_1">Deliver to</p>
                 <div class="add_icon">
                     <i class="fa-solid fa-location-dot"></i>
                     <p class="addr_2">India</p>
                 </div>
+            </div>
+
+            <div class="nav_search">
+                <select class="search_select">
+                    <option value="">All</option>
+                </select>
+                <input placeholder="Search Amazon" class="search_input">
+                <div class="search_icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+
+            <div class="nav_signIn">
+                <p><span>Hello,sign in</span></p>
+                <p class="nav_second">Account & lists</p>
             </div>
         </div>
     </header>
