--- a/index.html
+++ b/index.html
@@ -32,9 +32,33 @@
                 </div>
             </div>
 
-            <div class="nav_signIn">
+            <div class="nav_signIn border">
                 <p><span>Hello,sign in</span></p>
                 <p class="nav_second">Account & lists</p>
+            </div>
+
+            <div class="return border">
+                <p><span>Returns</span></p>
+                <p class="nav_second">& orders</p>
+            </div>
+
+            <div class="navCart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <p>cart</p>
+            </div>
+        </div>
+
+        <div class="panel">
+            <div class="panel_all">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+            <div class="panel_ops">
+                <p>Today's Deals</p>
+                <p>Customer Service</p>
+                <p>Registry</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>
             </div>
         </div>
     </header>
