--- a/index.html
+++ b/index.html
@@ -62,5 +62,137 @@
             </div>
         </div>
     </header>
+
+    <div class="hero_section">
+        <div class="hero_msg">
+            <p>You are on amazom.com. You can also shop on Amazon India for millions of product with fasr local delivery. <a href="https://www.amazon.in/?&tag=googhydrabk1-21&ref=pd_sl_7hz2t19t5c_e&adgrpid=155259815513&hvpone=&hvptwo=&hvadid=676742245123&hvpos=&hvnetw=g&hvrand=3257092430780703913&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9061748&hvtargid=kwd-10573980&hydadcr=14453_2367553">Click here to go to amazon.in</a></p>
+        </div>
+    </div>
+
+    <div class="shop_section">
+        <div class="box1 box">
+            <div class="box_content">
+                <h2>Clothes</h2>
+                <div class="box_img" style="background-image: url('box1_image.jpg');"></div>
+                <p>See More</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="box_content">
+                <h2>Health & Personal Care</h2>
+                <div class="box_img" style="background-image: url('box2_image.jpg');"></div>
+                <p>See More</p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box_content">
+                <h2>Furniture</h2>
+                <div class="box_img" style="background-image: url('box3_image.jpg');"></div>
+                <p>See More</p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box_content">
+                <h2>Electronics</h2>
+                <div class="box_img" style="background-image: url('box4_image.jpg');"></div>
+                <p>See More</p>
+            </div>
+        </div>
+        <div class="box5 box">
+            <div class="box_content">
+                <h2>Beauty Picks</h2>
+                <div class="box_img" style="background-image: url('box5_image.jpg');"></div>
+                <p>See More</p>
+            </div>
+        </div>
+        <div class="box6 box">
+            <div class="box_content">
+                <h2>Pet Care</h2>
+                <div class="box_img" style="background-image: url('box6_image.jpg');"></div>
+                <p>See More</p>
+            </div>
+        </div>
+        <div class="box7 box">
+            <div class="box_content">
+                <h2>New Arrival & Toys</h2>
+                <div class="box_img" style="background-image: url('box7_image.jpg');"></div>
+                <p>See More</p>
+            </div>
+        </div>
+        <div class="box8 box">
+            <div class="box_content">
+                <h2>Discover Fashion Trends</h2>
+                <div class="box_img" style="background-image: url('box8_image.jpg');"></div>
+                <p>See More</p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="foot_pannel1">
+            Back To Top
+        </div>
+
+        <div class="foot_pannel2">
+            <ul>
+                <p>Get to Know Us</p>
+                <a href="">Careers</a>
+                <a href="">Blogs</a>
+                <a href="">About Amazon</a>
+                <a href="">Investor Relations</a>
+                <a href="">Amazon Devices</a>
+                <a href="">Amazon Sciences</a>
+            </ul>
+
+            <ul>
+                <p>Make Money With Us</p>
+                <a href="">Sell Products on Amazon</a>
+                <a href="">Sell on Amazon Business</a>
+                <a href="">Sell Apps on Amazon</a>
+                <a href="">Become an Affiliate</a>
+                <a href="">Advertise Your Products</a>
+                <a href="">Self Publish with Us</a>
+                <a href="">Host on Amazon Hub</a>
+                <a href="">See More Make Money with Us</a>
+            </ul>
+
+            <ul>
+                <p>Amazon Payment Products</p>
+                <a href="">Amazon Business Card</a>
+                <a href="">Shop with Points</a>
+                <a href="">Reload Your Balance</a>
+                <a href="">Amazon Currency Converter</a>
+            </ul>
+
+            <ul>
+                <p>Let Us Help You</p>
+                <a href="">Amazon and COVID-19</a>
+                <a href="">Your Account</a>
+                <a href="">Your Orders</a>
+                <a href="">Shipping Rates & Policies</a>
+                <a href="">Returns & Replacements</a>
+                <a href="">Manage Your Content and Devices</a>
+                <a href="">Amazon Assistant</a>
+                <a href="">Help</a>
+            </ul>
+        </div>
+
+        <div class="foot_pannel3">
+            <div class="logo">
+
+            </div>
+        </div>
+
+        <div class="foot_pannel4">
+            <div class="pages">
+                <a href="">Conditions of Use</a>
+                <a href="">Privace Notice</a>
+                <a href="">Your Ads Privacy Choices</a>
+            </div>
+            <div class="copyright">
+                &copy 1996-2024, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
